WIP simple stacking storage type
Also convert more code to Java 17