@@ -8,6 +8,7 @@ import dev.rosewood.rosestacker.nms.hologram.Hologram;
 import dev.rosewood.rosestacker.nms.spawner.StackedSpawnerTile;
 import dev.rosewood.rosestacker.nms.storage.StackedEntityDataEntry;
 import dev.rosewood.rosestacker.nms.storage.StackedEntityDataStorage;
+import dev.rosewood.rosestacker.nms.storage.StackedEntityDataStorageType;
 import dev.rosewood.rosestacker.nms.util.ReflectionUtils;
 import dev.rosewood.rosestacker.nms.v1_19_R1.entity.SoloEntitySpider;
 import dev.rosewood.rosestacker.nms.v1_19_R1.entity.SoloEntityStrider;
@@ -16,11 +17,11 @@ import dev.rosewood.rosestacker.nms.v1_19_R1.hologram.HologramImpl;
 import dev.rosewood.rosestacker.nms.v1_19_R1.spawner.StackedSpawnerTileImpl;
 import dev.rosewood.rosestacker.nms.v1_19_R1.storage.NBTStackedEntityDataEntry;
 import dev.rosewood.rosestacker.nms.v1_19_R1.storage.NBTStackedEntityDataStorage;
+import dev.rosewood.rosestacker.nms.v1_19_R1.storage.SimpleStackedEntityDataStorage;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
@@ -59,6 +60,7 @@ import net.minecraft.world.entity.animal.Rabbit;
 import net.minecraft.world.entity.monster.Spider;
 import net.minecraft.world.entity.monster.Strider;
 import net.minecraft.world.entity.monster.Zombie;
+import net.minecraft.world.item.trading.MerchantOffers;
 import net.minecraft.world.level.BaseSpawner;
 import net.minecraft.world.level.ClipContext;
 import net.minecraft.world.level.Level;
@@ -74,6 +76,7 @@ import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.block.Block;
 import org.bukkit.craftbukkit.v1_19_R1.CraftWorld;
+import org.bukkit.craftbukkit.v1_19_R1.entity.CraftAbstractVillager;
 import org.bukkit.craftbukkit.v1_19_R1.entity.CraftCreeper;
 import org.bukkit.craftbukkit.v1_19_R1.entity.CraftEntity;
 import org.bukkit.craftbukkit.v1_19_R1.entity.CraftLivingEntity;
@@ -82,6 +85,7 @@ import org.bukkit.craftbukkit.v1_19_R1.entity.CraftTurtle;
 import org.bukkit.craftbukkit.v1_19_R1.inventory.CraftItemStack;
 import org.bukkit.craftbukkit.v1_19_R1.util.CraftChatMessage;
 import org.bukkit.craftbukkit.v1_19_R1.util.CraftNamespacedKey;
+import org.bukkit.entity.AbstractVillager;
 import org.bukkit.entity.Creeper;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.LivingEntity;
@@ -115,6 +119,8 @@ public class NMSHandlerImpl implements NMSHandler {
     private static long field_Level_random_offset; // Field offset for modifying LevelAccess's random field
     private static Field field_LegacyRandomSource_seed; // Field to get the seed of a LegacyRandomSource, normally private
 
+    private static Field field_AbstractVillager_offers; // Field to get the offers of an AbstractVillager, normally private
+
     static {
         try {
             Field field_Creeper_DATA_IS_IGNITED = ReflectionUtils.getFieldByPositionAndType(net.minecraft.world.entity.monster.Creeper.class, 2, EntityDataAccessor.class);
@@ -146,6 +152,8 @@ public class NMSHandlerImpl implements NMSHandler {
             field_SpawnerBlockEntity_spawner_offset = unsafe.objectFieldOffset(field_SpawnerBlockEntity_spawner);
             field_Level_random_offset = unsafe.objectFieldOffset(field_Level_random);
             field_LegacyRandomSource_seed = ReflectionUtils.getFieldByPositionAndType(LegacyRandomSource.class, 0, AtomicLong.class);
+
+            field_AbstractVillager_offers = ReflectionUtils.getFieldByPositionAndType(net.minecraft.world.entity.npc.AbstractVillager.class, 0, MerchantOffers.class);
         } catch (ReflectiveOperationException e) {
             e.printStackTrace();
         }
@@ -397,7 +405,7 @@ public class NMSHandlerImpl implements NMSHandler {
                     public void tick() { }
                 });
             }
-            field_LivingEntity_brain.set(mob, new Brain(Collections.emptyList(), Collections.emptyList(), ImmutableList.of(), () -> Brain.codec(Collections.emptyList(), Collections.emptyList())) {
+            field_LivingEntity_brain.set(mob, new Brain(List.of(), List.of(), ImmutableList.of(), () -> Brain.codec(List.of(), List.of())) {
                 public Optional<?> getMemory(MemoryModuleType var0) { return Optional.empty(); }
             });
         } catch (ReflectiveOperationException ex) {
@@ -449,14 +457,18 @@ public class NMSHandlerImpl implements NMSHandler {
         return nmsEntity1.level.clip(new ClipContext(vec3d, target, ClipContext.Block.VISUAL, ClipContext.Fluid.NONE, nmsEntity1)).getType() == HitResult.Type.MISS;
     }
 
-    @Override
-    public StackedEntityDataStorage createEntityDataStorage(LivingEntity livingEntity) {
-        return new NBTStackedEntityDataStorage(livingEntity);
+    public StackedEntityDataStorage createEntityDataStorage(LivingEntity livingEntity, StackedEntityDataStorageType storageType) {
+        return switch (storageType) {
+            case NBT -> new NBTStackedEntityDataStorage(livingEntity);
+            case SIMPLE -> new SimpleStackedEntityDataStorage(livingEntity);
+        };
     }
 
-    @Override
-    public StackedEntityDataStorage deserializeEntityDataStorage(byte[] data) {
-        return new NBTStackedEntityDataStorage(data);
+    public StackedEntityDataStorage deserializeEntityDataStorage(LivingEntity livingEntity, byte[] data, StackedEntityDataStorageType storageType) {
+        return switch (storageType) {
+            case NBT -> new NBTStackedEntityDataStorage(livingEntity, data);
+            case SIMPLE -> new SimpleStackedEntityDataStorage(livingEntity, data);
+        };
     }
 
     @Override
@@ -532,6 +544,32 @@ public class NMSHandlerImpl implements NMSHandler {
 
     private static void sendInfoConsoleMessage(String message) {
         Bukkit.getPluginManager().getPlugin("RoseStacker").getLogger().info(message);
+    }
+
+    public void saveEntityToTag(LivingEntity livingEntity, CompoundTag compoundTag) {
+        // Async villager "fix", if the trades aren't loaded yet force them to save as empty, they will get loaded later
+        if (livingEntity instanceof AbstractVillager) {
+            try {
+                net.minecraft.world.entity.npc.AbstractVillager villager = ((CraftAbstractVillager) livingEntity).getHandle();
+
+                // Set the trades to empty if they are null to prevent trades from generating during the saveWithoutId call
+                boolean bypassTrades = field_AbstractVillager_offers.get(villager) == null;
+                if (bypassTrades)
+                    field_AbstractVillager_offers.set(villager, new MerchantOffers());
+
+                ((CraftLivingEntity) livingEntity).getHandle().saveWithoutId(compoundTag);
+
+                // Restore the offers back to null and make sure nothing is written to the NBT
+                if (bypassTrades) {
+                    field_AbstractVillager_offers.set(villager, null);
+                    compoundTag.remove("Offers");
+                }
+            } catch (ReflectiveOperationException e) {
+                e.printStackTrace();
+            }
+        } else {
+            ((CraftLivingEntity) livingEntity).getHandle().saveWithoutId(compoundTag);
+        }
     }
 
 }
