@@ -5,9 +5,8 @@ import dev.rosewood.rosegarden.locale.Locale;
 import dev.rosewood.rosestacker.RoseStacker;
 import dev.rosewood.rosestacker.manager.ConversionManager;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 public class GermanLocale implements Locale {
@@ -122,12 +121,12 @@ public class GermanLocale implements Locale {
 
             this.put("#11", "Stacked Block GUI");
             this.put("gui-stacked-block-title", "Editiere %name% Stack");
-            this.put("gui-stacked-block-page-back", Collections.singletonList("&eVorherige Seite (" + GuiUtil.PREVIOUS_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
-            this.put("gui-stacked-block-page-forward", Collections.singletonList("&eNächste Seite (" + GuiUtil.NEXT_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
-            this.put("gui-stacked-block-destroy", Arrays.asList("&cDestroy Stack", "&eZerstört den Stack und lässt Gegenställe fallen"));
+            this.put("gui-stacked-block-page-back", List.of("&eVorherige Seite (" + GuiUtil.PREVIOUS_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
+            this.put("gui-stacked-block-page-forward", List.of("&eNächste Seite (" + GuiUtil.NEXT_PAGE_NUMBER_PLACEHOLDER + "/" + GuiUtil.MAX_PAGE_NUMBER_PLACEHOLDER + ")"));
+            this.put("gui-stacked-block-destroy", List.of("&cDestroy Stack", "&eZerstört den Stack und lässt Gegenställe fallen"));
             this.put("gui-stacked-block-destroy-title", "Block Stack zerstören?");
-            this.put("gui-stacked-block-destroy-confirm", Arrays.asList("&aConfirm", "&eJa, Stack zerstören"));
-            this.put("gui-stacked-block-destroy-cancel", Arrays.asList("&cCancel", "&eNein, zurück zum Screen davor"));
+            this.put("gui-stacked-block-destroy-confirm", List.of("&aConfirm", "&eJa, Stack zerstören"));
+            this.put("gui-stacked-block-destroy-cancel", List.of("&cCancel", "&eNein, zurück zum Screen davor"));
 
             this.put("#12", "Stacked Spawner GUI");
             this.put("gui-stacked-spawner-title", "Beobachte %name%");
