@@ -5,7 +5,6 @@ import dev.rosewood.rosestacker.spawner.conditions.ConditionTag;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
 import dev.rosewood.rosestacker.utils.EntityUtils;
 import dev.rosewood.rosestacker.utils.StackerUtils;
-import java.util.Collections;
 import java.util.List;
 import org.bukkit.block.Block;
 
@@ -30,7 +29,7 @@ public class AirConditionTag extends ConditionTag {
 
     @Override
     protected List<String> getInfoMessageValues(LocaleManager localeManager) {
-        return Collections.emptyList();
+        return List.of();
     }
 
 }
