@@ -5,7 +5,6 @@ import dev.rosewood.rosestacker.spawner.conditions.ConditionTag;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
@@ -43,7 +42,7 @@ public class BlockExceptionConditionTag extends ConditionTag {
 
     @Override
     protected List<String> getInfoMessageValues(LocaleManager localeManager) {
-        return this.blocks.stream().map(Enum::name).collect(Collectors.toList());
+        return this.blocks.stream().map(Enum::name).toList();
     }
 
 }
