@@ -4,7 +4,6 @@ import dev.rosewood.rosestacker.manager.LocaleManager;
 import dev.rosewood.rosestacker.spawner.conditions.ConditionTag;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
 import dev.rosewood.rosestacker.utils.StackerUtils;
-import java.util.Collections;
 import java.util.List;
 import org.bukkit.block.Block;
 import org.bukkit.entity.EntityType;
@@ -33,7 +32,7 @@ public class DarknessConditionTag extends ConditionTag {
 
     @Override
     protected List<String> getInfoMessageValues(LocaleManager localeManager) {
-        return Collections.emptyList();
+        return List.of();
     }
 
 }
