@@ -3,7 +3,6 @@ package dev.rosewood.rosestacker.spawner.conditions.tags;
 import dev.rosewood.rosestacker.manager.LocaleManager;
 import dev.rosewood.rosestacker.spawner.conditions.ConditionTag;
 import dev.rosewood.rosestacker.stack.StackedSpawner;
-import java.util.Collections;
 import java.util.List;
 import org.bukkit.block.Block;
 
@@ -27,7 +26,7 @@ public class NotPlayerPlacedConditionTag extends ConditionTag {
 
     @Override
     protected List<String> getInfoMessageValues(LocaleManager localeManager) {
-        return Collections.emptyList();
+        return List.of();
     }
 
 }
