@@ -17,12 +17,10 @@ import dev.rosewood.rosestacker.stack.settings.SpawnerStackSettings;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.bukkit.ChatColor;
 import org.bukkit.DyeColor;
 import org.bukkit.GameMode;
@@ -322,7 +320,7 @@ public final class ItemUtils {
         }
 
         String name = HexUtils.colorify(ConfigurationManager.Setting.STACK_TOOL_NAME.getString());
-        List<String> lore = ConfigurationManager.Setting.STACK_TOOL_LORE.getStringList().stream().map(HexUtils::colorify).collect(Collectors.toList());
+        List<String> lore = ConfigurationManager.Setting.STACK_TOOL_LORE.getStringList().stream().map(HexUtils::colorify).toList();
 
         ItemStack item = new ItemStack(material);
         ItemMeta meta = item.getItemMeta();
@@ -346,7 +344,7 @@ public final class ItemUtils {
     public static List<ItemStack> getMultipliedItemStack(ItemStack itemStack, double multiplier) {
         int amount = (int) Math.round(itemStack.getAmount() * multiplier);
         if (amount == 0)
-            return Collections.emptyList();
+            return List.of();
 
         List<ItemStack> items = new ArrayList<>();
         while (amount > 0) {
